# generate-config-with-web

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  tmp.py
src/router/: __init__.py  request.py
src/static/css/: directory.css  index.css  request.css  response.css
src/static/js/: directory.js  index.js  request.js  response.js  tools.js
src/template/: index.html
src/template/request/: request.html
src/templates/: directory.html  index.html  request.html  response.html  tmp.html
