[tool.poetry]
name = "generate-config-with-web"
version = "0.1.0"
description = ""
authors = ["baishi <baishi@572268633@qq.com>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
